package Cashiers;

public interface Status {
	public boolean isOpen();
	public void open();
	public void close();
}
