@startuml

abstract class Cashier {

}

class FastCashier {

}

class NormalCashier {

}

abstract class Order {
}

class NormalOrder {
}

class DeliveryOrder {
}

interface Status {
    +isOpen(): boolean
}
interface Delivery{
    +isDelivery(): boolean
}
class Queue {
    +Arraylist <Order>
    +int minutesWithoutQueue
    -getQueue(): Order[]
    -setQueue(Order[]): void
    -getMinutesWithoutQueue(): int
    -setMinutesWithoutQueue(int): void
    -addOrder(Order): void
    -getQueueSize(): int
    -removePerson(): void

}


class Supermarket {
    -cashier: Cashier[]
    +getCashier(): Cashier[]
}

Cashier <|-- FastCashier
Cashier <|-- NormalCashier
Order <|-- NormalOrder
Order <|-- DeliveryOrder
Status <|.. FastCashier
Status <|.. NormalCashier
Delivery <|.. DeliveryOrder
Cashier --o Supermarket : contains
Queue <|.. Supermarket

@enduml